Security & Access Rights Auditor/main/default/objects/AuditHistory__c/AuditHistory__c.object-meta.xml
<CustomObject>
    <label>AuditHistory</label>
    <nameField>
        <label>AuditHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuditHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>