Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/Audit_Step_name__c.field-meta.xml
<CustomField>
    <fullName>Audit_Step_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Step name</label>
    <referenceTo>Audit_Step__c</referenceTo>
    <relationshipLabel>AuditHistories</relationshipLabel>
    <relationshipName>AuditHistories</relationshipName>
    <type>Lookup</type>
</CustomField>