Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/DescPopulatedObjects__c.field-meta.xml
<CustomField>
    <fullName>DescPopulatedObjects__c</fullName>
    <label>DescPopulatedObjects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>