Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/InternalRoleAssignee__c.field-meta.xml
<CustomField>
    <fullName>InternalRoleAssignee__c</fullName>
    <label>InternalRoleAssignee</label>
    <type>TextArea</type>
</CustomField>