Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/InternalRoleMember__c.field-meta.xml
<CustomField>
    <fullName>InternalRoleMember__c</fullName>
    <label>InternalRoleMember</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>