Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/IsScheduled__c.field-meta.xml
<CustomField>
    <fullName>IsScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if the job is already scheduled it will falg as true</description>
    <label>IsScheduled</label>
    <type>Checkbox</type>
</CustomField>