Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/Last_login_date__c.field-meta.xml
<CustomField>
    <fullName>Last_login_date__c</fullName>
    <label>Last login date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>