Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/permissionSetsGroupAssignee__c.field-meta.xml
<CustomField>
    <fullName>permissionSetsGroupAssignee__c</fullName>
    <label>permissionSetsGroupAssignee</label>
    <type>TextArea</type>
</CustomField>