Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/PublicGroupMember__c.field-meta.xml
<CustomField>
    <fullName>PublicGroupMember__c</fullName>
    <label>PublicGroupMember</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>