Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/RolesMember__c.field-meta.xml
<CustomField>
    <fullName>RolesMember__c</fullName>
    <label>RolesMember</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>