Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/TotalManagedObjects__c.field-meta.xml
<CustomField>
    <fullName>TotalManagedObjects__c</fullName>
    <label>TotalManagedObjects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>