Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/UnusedExternalRoles__c.field-meta.xml
<CustomField>
    <fullName>UnusedExternalRoles__c</fullName>
    <label>UnusedExternalRoles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>