Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/UnusedPermissionsetsName__c.field-meta.xml
<CustomField>
    <fullName>UnusedPermissionsetsName__c</fullName>
    <label>UnusedPermissionsetsName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>