Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/UnusedPublicGroups__c.field-meta.xml
<CustomField>
    <fullName>UnusedPublicGroups__c</fullName>
    <label>UnusedPublicGroups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>