Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/UnusedRoles__c.field-meta.xml
<CustomField>
    <fullName>UnusedRoles__c</fullName>
    <label>UnusedRoles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>