Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/UsedExternalRoles__c.field-meta.xml
<CustomField>
    <fullName>UsedExternalRoles__c</fullName>
    <label>UsedExternalRoles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>