Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/UsedInternalRoles__c.field-meta.xml
<CustomField>
    <fullName>UsedInternalRoles__c</fullName>
    <label>UsedInternalRoles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>