Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/UsedPermissionsetsName__c.field-meta.xml
<CustomField>
    <fullName>UsedPermissionsetsName__c</fullName>
    <description>PermissionsetsName</description>
    <inlineHelpText>PermissionsetsName</inlineHelpText>
    <label>UsedPermissionsetsName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>