Security & Access Rights Auditor/main/default/objects/AuditHistory__c/fields/UsedPublicGroups__c.field-meta.xml
<CustomField>
    <fullName>UsedPublicGroups__c</fullName>
    <label>UsedPublicGroups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>